# zedbar

./: .clang-format  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  Makefile  Makefile.am  QR_COLOR_BANDS_INVESTIGATION.md  README-windows.md  README.md  RUST_MIGRATION_GUIDE.md  SYMBOL_DECODING_FLOW.md  TODO.md  UNSAFE_USERDATA_PROBLEM.md  build.rs  configure.ac  release-please-config.json  zbar.spec.in
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
benches/: README.md  comparison.rs
demo/: app.js  build-html.mjs  build.sh  index.html  index.src.html  package-lock.json  package.json  style.css
doc/: Makefile.am.inc  doxygen.conf.in  manual.xml
doc/ref/: commonoptions.xml  zbarcam.xml  zbarimg.xml
examples/: generate_test_fixtures.rs  scanner_api.rs
include/: Makefile.am.inc  config.h  zbar.h
include/zbar/: Exception.h  Image.h  ImageScanner.h
npm/: README.md  build.sh  package-lock.json  package.json  test.mjs
po/: pt_BR.po
proptest-regressions/: proptest_qr.txt
src/: code128.rs  code39.rs  color.rs  config.rs  databar_utils.rs  decoder.rs  decoder_types.rs  error.rs  ffi.rs  finder.rs  i25.rs  image.rs  image_data.rs  image_ffi.rs  img_scanner.rs  img_scanner_config.rs  lib.rs  line_scanner.rs  processor.rs  proptest_qr.rs  scanner.rs  sqcode.rs  symbol.rs  wasm.rs
src/config/: internal.rs  symbologies.rs
src/decoders/: codabar.rs  code128.rs  code39.rs  code93.rs  databar.rs  ean.rs  i25.rs  mod.rs
src/qrcode/: bch15_5.rs  binarize.rs  isaac.rs  mod.rs  qrdec.rs  qrdectxt.rs  rs.rs  util.rs
test/: Makefile.am.inc  test_convert.c  test_decode.c  test_examples.sh.in  test_images.c  test_video.c
tests/: decode_examples.rs  orientation.rs  test_decoder_layout.rs
zbar/: Makefile.am  config.c  config.h  convert.c  debug.h  decoder.c  decoder.h  error.c  error.h  event.h  image.c  image.h  img_scanner.c  img_scanner.h  jpeg.c  mutex.h  processor.c  processor.h  refcnt.c  refcnt.h  scanner.c  sqcode.c  sqcode.h  symbol.c  symbol.h  thread.h  timer.h  video.c  window.c  zbar.h
zbar/decoder/: codabar.c  codabar.h  code128.c  code128.h  code39.c  code39.h  code93.c  databar.c  databar.h  ean.c  ean.h  i25.c  i25.h  qr_finder.c  qr_finder.h  sq_finder.c
zbar/processor/: lock.c  posix.c
zbar/qrcode/: bch15_5.c  binarize.c  binarize.h  isaac.c  isaac.h  qrdec.c  qrdec.h  qrdectxt.c  rs.c  rs.h  util.c  util.h
zbar/video/: dshow.c  null.c  v4l2.c
zbar/window/: null.c  ximage.c  xv.c
zbarcam/: Makefile.am.inc  zbarcam.c
zbarimg/: Makefile.am.inc  zbarimg.c
