[package]
name = "zbar-rust"
version = "0.1.0"
edition = "2021"
description = "ZBar barcode scanning library"
license = "LGPL-3.0-or-later"
repository = "https://github.com/eventualbuddha/zbar"

[lib]
name = "zbar"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
libc = "0.2"
image = "0.25"
encoding_rs = "0.8.33"
reed-solomon = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"

[[bin]]
name = "zbarimg"
path = "src/bin/zbarimg.rs"

[dev-dependencies]
proptest = "1.4"
qrcode = "0.14"
rqrr = "0.10"
reed-solomon = "0.2.1"

[features]
default = ["qrcode", "ean", "code128", "code39"]
qrcode = []
ean = []
code128 = []
code39 = []
code93 = []
codabar = []
databar = []
i25 = []
