[package]
name = "zbar-rust"
version = "0.1.0"
edition = "2021"
description = "ZBar barcode scanning library"
license = "LGPL-3.0-or-later"
repository = "https://github.com/eventualbuddha/zbar"

[lib]
name = "zbar"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Optional dependencies
encoding_rs = { version = "0.8.33", optional = true }
reed-solomon = { version = "0.2.1", optional = true }
rand = { version = "0.9", optional = true }
rand_chacha = { version = "0.9", optional = true }
image = { version = "0.25", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[[bin]]
name = "zbarimg"
path = "src/bin/zbarimg.rs"
required-features = ["image", "clap"]

[dev-dependencies]
proptest = "1.4"
qrcode = "0.14"
rqrr = "0.10"
reed-solomon = "0.2.1"
encoding_rs = "0.8.33"
rand = "0.9"
rand_chacha = "0.9"
image = "0.25"

[features]
default = ["qrcode", "sqcode", "ean", "code128", "code39", "code93", "codabar", "databar", "i25", "image", "clap"]
qrcode = ["dep:encoding_rs", "dep:reed-solomon", "dep:rand", "dep:rand_chacha"]
sqcode = []
ean = []
code128 = []
code39 = []
code93 = []
codabar = []
databar = []
i25 = []
image = ["dep:image"]
clap = ["dep:clap"]
